# utilitieswebgui

./: CLAUDE.md  HANDOFF_PROMPT.md  README.md  app.py  process_files.py  pyproject.toml  utility-a.py
.claude/: settings.local.json
examples/: app_tuning.properties  application.properties  customUserDatesCounts.csv
examples/profile_migration/: main.py
examples/profile_migration/example_files/: analyticsDatesCounts.csv  keystoreFile.jceks  log4j2.xml  solutionDatesCounts.csv
examples/simple_processor/: main.py
src/utilities_web/: __init__.py  app_factory.py  input_types.py  processor.py
src/utilities_web.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utilities_web/templates/: base.html  form.html  result.html
tests/: test_app_factory.py  test_input_types.py  test_processor.py
