[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities-web"
version = "0.1.0"
description = "A reusable Flask-based web UI framework for running data processing utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "flask>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
utilities_web = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
